@@ -143,3 +143,66 @@ p.image-attachment .attachment-links {
 	display: none;
 }
 
+/* contact print */
+#contact-details fieldset {
+	color: #666;
+	border: 1px solid #999;
+	margin-top: 5px;
+}
+
+#contact-details fieldset.contactfieldgroup {
+	border: 0;
+	padding: 0;
+	margin: 0;
+}
+
+#contact-details div.row {
+	padding: 2px 0;
+}
+
+#contact-details .contactfieldlabel {
+	display: inline-block;
+	vertical-align: top;
+	width: 150px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+#contact-details .contactfieldcontent {
+	display: inline-block;
+	vertical-align: top;
+	font-weight: bold;
+}
+
+#contact-details #contactphoto {
+	float: left;
+	margin: 5px 15px 5px 3px;
+	width: 112px;
+	border: 0;
+	padding: 0;
+}
+
+#contact-details #contactpic {
+	width: 112px;
+	background: white;
+}
+
+#contact-details #contactpic img {
+	max-width: 112px;
+	visibility: inherit;
+}
+
+#contact-details #contacthead {
+	border: 0;
+	margin: 0 16em 0 0;
+	padding: 0;
+}
+
+#contact-details #contacthead > legend {
+	display: none;
+}
+
+#contact-details #contacthead .names span.namefield {
+	font-size: 140%;
+	font-weight: bold;
+}
